--- a/src/main/frontend/themes/default/css/navbar.css
+++ b/src/main/frontend/themes/default/css/navbar.css
@@ -14,6 +14,12 @@
   box-shadow: 0 2px 8px #0001;
 }
 
+.navbar-left {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
 .navbar-logo {
   display: flex;
   align-items: center;
@@ -33,19 +39,32 @@
   letter-spacing: 1px;
 }
 
-.navbar-links {
-  display: flex;
-  gap: 2rem;
-}
-
-.navbar-links span {
+.navbar-link {
   color: #222;
   font-size: 1.05rem;
   cursor: pointer;
   transition: color 0.2s;
   font-weight: 500;
+  margin-left: 1.2rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
-.navbar-links span:hover {
+.navbar-link:last-child {
+  margin-right: 5rem;
+}
+
+.navbar-link:hover {
   color: #76b900;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.fas.fa-shopping-cart {
+  font-size: 1.3rem;
 }
