Ajuste de la vista del Login y validacion de inicio de sesion para comprar

--- a/src/main/frontend/themes/default/css/index.css
+++ b/src/main/frontend/themes/default/css/index.css
@@ -1,3 +1,22 @@
+html, body {
+  width: 100%;
+  overflow-x: hidden !important;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+
+
 .nvidia-navbar {
   width: 100%;
   display: flex;
