--- a/src/main/frontend/themes/default/css/navbar.css
+++ b/src/main/frontend/themes/default/css/navbar.css
@@ -23,13 +23,13 @@
 .navbar-logo {
   display: flex;
   align-items: center;
-  gap: 0.7rem;
+  gap: 0.5rem;
   cursor: pointer;
 }
 
 .navbar-logo img {
   height: 32px;
-  width: 32px;
+  width: 4;
 }
 
 .navbar-title {
